食材取得数まで追加

--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
       <option value="">-- 全て --</option>
     </select>
     <label><input type="checkbox" id="ticket-checkbox"> キャンチケ</label>
+    <label for="otebo-dropdown">おてぼ: </label>
+    <select id="otebo-dropdown">
+      <option value="0">0</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4" selected>4</option>
+    </select>
   </div>
   <table id="pokemon-table" border="1">
     <thead>
       <tr>
-        <th>名前</th><th>食材</th><th>数</th><th>レベル</th><th>お手スピ</th><th>％</th><th>平均入れ替え回数</th><th>実お手スピ</th>
+        <th>名前</th><th>食材</th><th>数</th><th>レベル</th><th>お手スピ</th><th>％</th><th>平均入れ替え回数</th><th>実お手スピ</th><th>1時間での取得個数</th>
       </tr>
     </thead>
     <tbody id="pokemon-table-body"></tbody>
