--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Pokemon Data Table</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Pokemon Data</h1>
-  <div>
+  <div class="controls">
     <label for="search-input">名前で検索: </label>
     <input type="text" id="search-input" placeholder="名前を入力">
     <label for="search-dropdown">プルダウン検索(名前): </label>
