--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <table id="pokemon-table" border="1">
     <thead>
       <tr>
-        <th>名前</th><th>食材</th><th>数</th><th>レベル</th><th>お手スピ</th><th>％</th><th>平均入れ替え回数</th><th>実お手スピ</th><th>1時間での取得個数</th>
+        <th>名前</th><th>食材</th><th>数</th><th>レベル</th><th>お手スピ</th><th>％</th><th>おてぼ</th><th>スピM</th><th>スピS</th><th>食S</th><th>食M</th><th>性格</th>
+        <th>平均入れ替え回数</th><th>実お手スピ</th><th>1時間での取得個数</th>
       </tr>
     </thead>
     <tbody id="pokemon-table-body"></tbody>
