--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Pokemon Data</h1>
+  <button id="add-btn">ポケモンを追加</button>
   <div class="controls">
     <label for="search-input">名前で検索: </label>
     <input type="text" id="search-input" placeholder="名前を入力">
@@ -30,11 +31,39 @@
       <option value="4" selected>4</option>
     </select>
   </div>
+  <!-- Add Modal -->
+  <div id="add-modal" class="modal hidden">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>ポケモンを追加</h2>
+      <form id="add-form">
+        <label>名前<select id="form-name"></select></label>
+        <label>食材<select id="form-ing"></select></label>
+        <label>数量<select id="form-amount"></select></label>
+        <label>レベル<input type="number" id="form-level" min="30" max="100"></label>
+        <label>食材率(%)<input type="number" step="0.1" id="form-ing_percent"></label>
+        <label>お手スピ<input type="number" id="form-help_speed"></label>
+        <label><input type="checkbox" id="form-otebo"> おてぼ</label>
+        <label><input type="checkbox" id="form-spM"> スピM</label>
+        <label><input type="checkbox" id="form-spS"> スピS</label>
+        <label><input type="checkbox" id="form-ingS"> 食S</label>
+        <label><input type="checkbox" id="form-ingM"> 食M</label>
+        <label>性格<select id="form-nature">
+          <option value="sp_up">スピ↑</option>
+          <option value="ing_up">食↑</option>
+          <option value="ijippari">いじっぱり</option>
+          <option value="hikaeme">ひかえめ</option>
+        </select></label>
+        <button type="button" id="save-btn">保存</button>
+      </form>
+    </div>
+  </div>
   <table id="pokemon-table" border="1">
     <thead>
       <tr>
-        <th>名前</th><th>食材</th><th>数</th><th>レベル</th><th>お手スピ</th><th>％</th><th>おてぼ</th><th>スピM</th><th>スピS</th><th>食S</th><th>食M</th><th>性格</th>
-        <th>平均入れ替え回数</th><th>実お手スピ</th><th>1時間での取得個数</th>
+        <th>名前</th><th>食材</th><th>数</th><th>レベル</th><th>お手スピ</th><th>％</th>
+        <th>おてぼ</th><th>スピM</th><th>スピS</th><th>食S</th><th>食M</th><th>性格</th>
+        <th>平均入れ替え回数</th><th>実お手スピ</th><th>1時間での取得個数</th><th>操作</th>
       </tr>
     </thead>
     <tbody id="pokemon-table-body"></tbody>
