--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         </label>
         <label>食材<select id="form-ing"></select></label>
         <label>数量<select id="form-amount"></select></label>
-        <label>レベル<input type="number" id="form-level" min="30" max="100"></label>
+        <label>レベル<select id="form-level">
+          <option value="30">30</option>
+          <option value="50">50</option>
+          <option value="60">60</option>
+        </select></label>
         <label>食材率(%)<input type="number" step="0.1" id="form-ing_percent"></label>
         <label>お手スピ<input type="number" id="form-help_speed"></label>
         <label><input type="checkbox" id="form-otebo"> おてぼ</label>
@@ -52,11 +56,11 @@
         <label><input type="checkbox" id="form-ingS"> 食S</label>
         <label><input type="checkbox" id="form-ingM"> 食M</label>
         <label>性格<select id="form-nature">
-          <option value="sp_up">-</option>
-          <option value="ing_up">スピ↑</option>
+          <option value="">-</option>
+          <option value="sp_up">スピ↑</option>
           <option value="ing_up">食↑</option>
-          <option value="ijippari">いじっぱり</option>
-          <option value="hikaeme">ひかえめ</option>
+         <option value="ijippari">いじっぱり</option>
+         <option value="hikaeme">ひかえめ</option>
         </select></label>
         <button type="button" id="save-btn">保存</button>
       </form>
