実お手伝い時間と実質お手伝い時間を分けた

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <select id="search-ing-dropdown">
       <option value="">-- 全て --</option>
     </select>
-    <label><input type="checkbox" id="ticket-checkbox"> キャンチケ</label>
+    <label><input type="checkbox" id="ticket-checkbox" checked> キャンチケ</label>
     <label for="otebo-dropdown">おてぼ: </label>
     <select id="otebo-dropdown">
       <option value="0">0</option>
@@ -71,7 +71,7 @@
       <tr>
         <th>名前</th><th>食材</th><th>数</th><th>レベル</th><th>お手スピ</th><th>％</th>
         <th>おてぼ</th><th>スピM</th><th>スピS</th><th>食S</th><th>食M</th><th>性格</th>
-        <th>平均入れ替え回数</th><th>実お手スピ</th><th>1時間での取得個数</th><th>操作</th>
+        <th>平均入れ替え回数</th><th>実お手スピ</th><th>実質お手スピ<br>(入れ替え込み)</th><th>1時間での取得個数</th><th>操作</th>
       </tr>
     </thead>
     <tbody id="pokemon-table-body"></tbody>
